src/CommsyBundle/Resources/public/css/cs-theme/custom.less
div.cs-edit-spinner {
    > div {
        background-color: rgba(150, 150, 150, 0.75);
        padding: 10px;
        border-radius: 10px;
        width: 24px
    }
}

div.cs-save-spinner {
    > div {
        background-color: rgba(150, 150, 150, 0.75);
        padding: 10px;
        border-radius: 10px;
        width: 24px
    }
}

div.cs-toggle-preview {
    > div.uk-panel {
        height: 140px;
        overflow: hidden;
    }
}

div.cs-toggle-preview-small {
    > div.uk-panel {
        height: 60px;
        overflow: hidden;
    }
}

div.cs-toggle-content {
    > div.uk-panel {
        min-height: 120px;
    }
}

div.cs-toggle-empty {
    > div.uk-panel {
        min-height: 60px;
    }
}

.cs-icon-xxl-large {
    font-size: 80px;
    margin-left: auto;
    margin-right: auto; 
    vertical-align: -22%;
}


.cs-file-panel-box {
   padding: 0 5px 5px;
}

.cs-file-grid > *{
   padding-left: 10px;
   margin-bottom:5px;
}

.cs-file-grid{
   margin-left: 0px;
}


.cs-accordion-detail {
    background: none;
    cursor: pointer;
    font-size: 12px;
    line-height: 18px;
    margin-bottom: 10px 0px 10px 5px;
    margin-top: 0;
    padding: 5px 0px;
}


.cs-icon-medium {
    font-size: 28px;
    margin-left: auto;
    margin-right: auto; 
}

.cs-icon-xs-small {
  font-size: 100%;
  vertical-align: -10%;
}

.cs-slider {
    margin-top: -10px;
}

.cs-align-center {
    margin-left: auto;
    margin-right: auto; 
    display: block;   
    text-align: center;
    margin-bottom: 2px !important;
}

.cs-detail-divider{
    position:relative;
    top:28px;
    color: #6593B3;
    border-color: #6593B3;       
}

.cs-list-divider{
    position:relative;
    top:27px;
    color: #6593B3;
    border-color: #6593B3;       
}

.cs-detail-section-header-background{
    background-color: #FFFFFF;
    padding: 5px;
    position:relative;
}

.cs-detail-section-header{
    color: #6593B3;
    margin-bottom:25px;
    margin-left: -5px;
}

.cs-list-section-header{
    color: #6593B3;
    margin-bottom:10px;
    margin-top:0px;
    margin-left: -5px;
}

.cs-remove-overflow{
    overflow: visible !important;   
}

.cs-remove-padding{
    padding:0px !important;
}

.cs-remove-border{
    border:0px !important;
}

.cs-padding-10{
    padding:10px;
}

.cs-padding-5{
    padding:5px;
}

@media (max-width: 959px){
    .cs-addon-navigation{
        display:none;
    }
}

@media (max-width: 959px){
    .cs-addon-navigation-large{
        display:none;
    }
}

